resolved bug when deleting the last city from list. also changed css styling of leaflet map so that enlargin map on mobile devices doesn't consume entire screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -405,8 +405,8 @@ h2 span {
 }
 
 .leaflet-container {
-  height: 100vh;
-  width: 100%;
+  height: 100%;
+  width: 100vw;
 }
 
 .past_loc_temp, .past_loc_cityState {
